--- a/src/global/style/base.scss
+++ b/src/global/style/base.scss
@@ -2,7 +2,7 @@
 * @Author: chenchao
 * @Date:   2018-04-11 11:54:58
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-11 15:52:27
+* @Last Modified time: 2018-04-16 10:05:09
 */
 .color-base {
     color: #E84A01 !important;
@@ -87,11 +87,11 @@
     }
 }
 
-.float-l {
+.f-l {
     float: left;
 }
 
-.float-r {
+.f-r {
     float: right;
 }
 
