nest-router test

--- a/src/global/style/reset.scss
+++ b/src/global/style/reset.scss
@@ -2,12 +2,12 @@
 * @Author: chenchao
 * @Date:   2018-04-11 11:54:51
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-11 14:52:57
+* @Last Modified time: 2018-04-18 16:41:25
 */
-html {
+html, body {
     color: #212121;
     //background: #f2f2f2;
-    //height: 100%;
+    height: 100%;
 }
 
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, fieldset, lengend, button, input, textarea, form, th, td {
