fix header footer

--- a/src/global/style/base.scss
+++ b/src/global/style/base.scss
@@ -2,7 +2,7 @@
 * @Author: chenchao
 * @Date:   2018-04-11 11:54:58
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-16 17:49:34
+* @Last Modified time: 2018-04-19 15:07:21
 */
 .color-base {
     color: #E84A01 !important;
@@ -19,15 +19,6 @@
 .color-75 {
     color: #757575 !important;
 }
-
-.color-21 {
-    color: #212121 !important;
-}
-
-.color-21 {
-    color: #212121 !important;
-}
-
 .font-12 {
     font-size: 12px !important;
 }
@@ -75,7 +66,12 @@
 .bg-c-ff {
     background-color: #fff !important;
 }
-
+.pd-l-6{
+    padding-left: 6px;
+}
+.pd-r-6{
+    padding-right: 6px;
+}
 /* 清除浮动 */
 .clearfix {
     &:before, &:after {
@@ -112,4 +108,13 @@
     white-space: nowrap;
     text-overflow: ellipsis;
 }
-
+.d-show {
+    display: block;
+}
+.d-none{
+    display: none;
+}
+.w100-h100 {
+    width: 100%;
+    height: 100%;
+}
