--- a/src/app.scss
+++ b/src/app.scss
@@ -2,9 +2,13 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:20:57
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-18 17:21:37
+* @Last Modified time: 2018-04-19 14:27:32
 */
 
 #app {
     height: 100%;
+    .main-box {
+        width: 1200px;
+        margin: 0 auto;
+    }
 }
