--- a/src/router/router.scss
+++ b/src/router/router.scss
@@ -2,9 +2,12 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:12:02
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-18 17:21:29
+* @Last Modified time: 2018-04-19 15:44:17
 */
 
 .app-content {
-    min-height: 90%
+    min-height: 100%;
+    .content-box{
+        padding-bottom: 60px;
+    }
 }
