--- a/src/app.scss
+++ b/src/app.scss
@@ -2,11 +2,12 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:20:57
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-19 14:27:32
+* @Last Modified time: 2018-04-20 15:59:00
 */
 
 #app {
     height: 100%;
+    min-width: 1240px;
     .main-box {
         width: 1200px;
         margin: 0 auto;
