--- a/src/router/router.scss
+++ b/src/router/router.scss
@@ -2,12 +2,13 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:12:02
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-19 15:44:17
+* @Last Modified time: 2018-04-20 17:45:53
 */
 
-.app-content {
+.app-content{
     min-height: 100%;
     .content-box{
+        padding-top: 60px;
         padding-bottom: 60px;
     }
 }
