--- a/src/global/footer/footer.scss
+++ b/src/global/footer/footer.scss
@@ -2,12 +2,12 @@
 * @Author: chenchao
 * @Date:   2018-04-19 14:21:47
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-20 16:13:15
+* @Last Modified time: 2018-04-23 14:12:16
 */
 .app-footer{
     line-height: 60px;
     text-align: center;
-    background-color: #F55145;
+    background-color: #303030;
     color: #fff;
     margin-top: -60px;
 }
