--- a/src/global/style/reset.scss
+++ b/src/global/style/reset.scss
@@ -2,7 +2,7 @@
 * @Author: chenchao
 * @Date:   2018-04-11 11:54:51
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-18 16:41:25
+* @Last Modified time: 2018-04-23 19:02:28
 */
 html, body {
     color: #212121;
@@ -161,6 +161,7 @@ img {
     -ms-interpolation-mode: bicubic;
     border: 0;
     outline: none;
+    vertical-align: middle;
 }
 div {
     outline: none;
