--- a/src/home/views/home.scss
+++ b/src/home/views/home.scss
@@ -2,5 +2,8 @@
 * @Author: chenchao
 * @Date:   2018-04-20 16:18:24
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-20 16:18:24
+* @Last Modified time: 2018-04-23 19:05:38
 */
+.app-home{
+
+}
