--- a/src/app.scss
+++ b/src/app.scss
@@ -2,14 +2,14 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:20:57
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-20 15:59:00
+* @Last Modified time: 2018-07-18 16:00:40
 */
 
 #app {
     height: 100%;
     min-width: 1240px;
     .main-box {
-        width: 1200px;
+        width: 1200px!important;
         margin: 0 auto;
     }
 }
