--- a/src/fe-dev/views/fe-dev.scss
+++ b/src/fe-dev/views/fe-dev.scss
@@ -2,5 +2,10 @@
 * @Author: chenchao
 * @Date:   2018-04-23 11:31:56
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-05-22 15:45:52
+* @Last Modified time: 2018-07-23 18:09:12
 */
+
+.app-fe{
+    height: 1000px;
+}
+
