--- a/src/global/style/base.scss
+++ b/src/global/style/base.scss
@@ -2,7 +2,7 @@
 * @Author: chenchao
 * @Date:   2018-04-11 11:54:58
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-07-17 16:06:03
+* @Last Modified time: 2018-07-23 17:43:47
 */
 .color-base {
     color: #E84A01 !important;
@@ -72,6 +72,12 @@
 .pd-r-6{
     padding-right: 6px;
 }
+.pd-l-12{
+    padding-left: 12px;
+}
+.pd-r-12{
+    padding-right: 12px;
+}
 /* 清除浮动 */
 .clearfix {
     &:before, &:after {
@@ -107,6 +113,9 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+.d-i-b {
+    display: inline-block;
 }
 .d-show {
     display: block;
