--- a/src/index/component/list.scss
+++ b/src/index/component/list.scss
@@ -2,8 +2,11 @@
 * @Author: chenchao
 * @Date:   2018-04-25 10:47:47
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-25 10:48:57
+* @Last Modified time: 2018-08-15 16:35:07
 */
+.list-box{
+    display: inline-block;
+}
 .list-item{
     display: flex;
     margin-top: 20px;
@@ -24,14 +27,9 @@
             font-size: 20px;
         }
         .item-content{
-            //display: -webkit-box;
-            //-webkit-box-orient: vertical;
-            //-webkit-line-clamp: 4;
             line-height: 30px;
             max-height: 120px;
             height: 120px;
-            //overflow : hidden;
-            //text-overflow: ellipsis;
         }
         .item-time{
             line-height: 40px;
