--- a/src/global/style/reset.scss
+++ b/src/global/style/reset.scss
@@ -2,11 +2,11 @@
 * @Author: chenchao
 * @Date:   2018-04-11 11:54:51
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-04-23 19:02:28
+* @Last Modified time: 2018-08-15 17:58:13
 */
 html, body {
     color: #212121;
-    //background: #f2f2f2;
+    background: #f7f7f7;
     height: 100%;
 }
 
