--- a/src/index/component/list.scss
+++ b/src/index/component/list.scss
@@ -2,24 +2,30 @@
 * @Author: chenchao
 * @Date:   2018-04-25 10:47:47
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-08-15 16:35:07
+* @Last Modified time: 2018-08-15 18:03:32
 */
 .list-box{
-    display: inline-block;
+    display: block;
+    background-color: #fff;
+    transition: all .2s linear;
+    padding: 10px 0;
+    margin-top: 20px;
+    margin-bottom: 20px;    
+    &:hover{
+        box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+        transform: translate3d(0, -2px, 0);
+    }
 }
 .list-item{
-    display: flex;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    cursor: pointer;
-    &:hover{
-        background-color: #ebebeb;
-    }
     .item-img{
-
+        width: 200px;
+        height: 200px;
+        &>img{
+            width: 100%;
+            height: 100%;
+        }
     }
     .item-r{
-        flex: 1;
         padding-left: 20px;
         .item-title{
             line-height: 40px;
