--- a/src/index/component/list.scss
+++ b/src/index/component/list.scss
@@ -2,13 +2,13 @@
 * @Author: chenchao
 * @Date:   2018-04-25 10:47:47
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-08-15 18:24:33
+* @Last Modified time: 2018-08-16 09:48:23
 */
 .list-box{
     display: block;
     background-color: #fff;
     transition: all .2s linear;
-    padding: 10px 0;
+    padding: 10px;
     margin-top: 20px;
     margin-bottom: 20px;    
     &:hover{
