--- a/src/she/views/she.scss
+++ b/src/she/views/she.scss
@@ -2,9 +2,28 @@
 * @Author: chenchao
 * @Date:   2018-07-23 18:11:04
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-07-23 18:11:16
+* @Last Modified time: 2018-08-18 20:33:26
 */
 
 .app-she{
-    height: 1000px;
+    padding: 40px 0;
+    .lh-40{
+        line-height: 40px;
+    }
+    .she-box{
+        background: #fff;
+        padding: 30px 0;
+    }
+    .she-title{
+        line-height: 60px;
+    }
+    .she-content{
+        line-height: 30px;
+        font-size: 16px;
+        text-align: center;
+    }
+    .content-bottom{
+        line-height: 40px;
+        color: red;
+    }
 }
