--- a/src/app.scss
+++ b/src/app.scss
@@ -2,12 +2,13 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:20:57
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-07-18 16:00:40
+* @Last Modified time: 2018-08-30 15:40:01
 */
 
 #app {
-    height: 100%;
+    min-height: 100%;
     min-width: 1240px;
+    position: relative;
     .main-box {
         width: 1200px!important;
         margin: 0 auto;
