--- a/src/she/views/she.scss
+++ b/src/she/views/she.scss
@@ -2,11 +2,12 @@
 * @Author: chenchao
 * @Date:   2018-07-23 18:11:04
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-08-18 20:33:26
+* @Last Modified time: 2018-08-31 00:20:13
 */
 
 .app-she{
     padding: 40px 0;
+    text-align: center;
     .lh-40{
         line-height: 40px;
     }
@@ -16,11 +17,11 @@
     }
     .she-title{
         line-height: 60px;
+        height: 60px;
     }
     .she-content{
         line-height: 30px;
         font-size: 16px;
-        text-align: center;
     }
     .content-bottom{
         line-height: 40px;
