--- a/src/app.scss
+++ b/src/app.scss
@@ -2,11 +2,11 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:20:57
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-08-30 15:40:01
+* @Last Modified time: 2018-09-01 20:32:25
 */
 
 #app {
-    min-height: 100%;
+    height: 100%;
     min-width: 1240px;
     position: relative;
     .main-box {
