--- a/src/router/router.scss
+++ b/src/router/router.scss
@@ -2,13 +2,13 @@
 * @Author: chenchao
 * @Date:   2018-04-18 17:12:02
 * @Last Modified by:   chenchao
-* @Last Modified time: 2018-08-30 15:44:45
+* @Last Modified time: 2018-09-01 20:45:09
 */
 
 .app-content{
     min-height: 100%;
     .content-box{
-        //padding-top: 60px;
+        padding-top: 60px;
         padding-bottom: 60px;
     }
 }
