--- a/src/router/router.scss
+++ b/src/router/router.scss
@@ -6,9 +6,10 @@
 */
 
 .app-content{
-    min-height: 100%;
+    // min-height: 589px;
+    // min-height: 539px;
     .content-box{
-        padding-top: 60px;
+        // padding-top: 60px;
         padding-bottom: 60px;
     }
 }
